<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#002F32"
    tools:context=".AlarmFiredActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_view_question"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded"
        android:backgroundTint="#006064"
        android:text="@string/question_title"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />


    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:backgroundTint="#006064"
        android:layout_above="@id/radio_group"
        android:layout_marginBottom="16dp"
        android:text="@string/here_will_be_the_question_text_nhere_will_be_the_question_text_nhere_will_be_the_question_text"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:background="@drawable/rounded"
            android:backgroundTint="#006064"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:background="@drawable/rounded"
            android:textColor="#fff"
            android:backgroundTint="#006064"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:background="@drawable/rounded"
            android:textColor="#fff"
            android:backgroundTint="#006064"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:background="@drawable/rounded"
            android:backgroundTint="#006064"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:text="@string/option_4" />


    </RadioGroup>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#006064"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_below="@id/radio_group"
        android:layout_marginTop="16dp"
        android:text="@string/confirm" />

</RelativeLayout>