<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Expand">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:background="@color/design_default_color_secondary_variant"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/design_default_color_secondary_variant"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="334dp"
                android:layout_height="match_parent"
                android:layout_marginStart="23dp"
                android:gravity="start"
                android:background="@android:color/transparent"
                android:padding="2dp"
                android:text="@string/_12_00_00"
                android:textSize="40sp" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="0dp"
                android:background="@android:color/transparent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_secondary_variant"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/design_default_color_secondary_variant"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="77dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/repeat"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:text="@string/sun"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:text="@string/mon"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:text="@string/tue"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:text="@string/wed"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:text="@string/thu"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:text="@string/fri"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:text="@string/sat"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:background="@color/design_default_color_secondary_variant"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="54dp"
                    android:padding="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_baseline_vibration_24"
                    android:contentDescription="@string/todo" />

                <CheckedTextView
                    android:id="@+id/checkedTextView"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:padding="20dp"
                    android:text="@string/vibrate" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="66dp"
                        android:padding="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_baseline_notifications_active_24"
                        android:contentDescription="@string/tod90" />

                    <TextView
                        android:id="@+id/TextView1"
                        android:layout_width="205dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/ringtone"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

</RelativeLayout>