<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EB4DB6AC"
    tools:context=".Help">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:backgroundTint="#006064"
                android:padding="10dp"
                android:text="@string/this_is_a_digital_clock_based_app"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:backgroundTint="#0097a7"
                android:padding="10dp"
                android:text="@string/features_how_to_use_them"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="526dp"
                android:background="#002F32"
                android:contentDescription="@string/todo789"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ss" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/rounded"
                android:backgroundTint="#006064"
                android:text="@string/for_any_further_help_nclick_the_button_below"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_surface"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/click_me" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>