<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002F32"
    tools:context=".SetAlarmActivity">

    <TextView
        android:id="@+id/text_view_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="193dp"
        android:text="@string/_12_00"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display2" />

    <Button
        android:id="@+id/button_rigtone_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_time_picker"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/cookie"
        android:textColor="#ffff"
        android:background="@drawable/rounded"
        android:backgroundTint="#00838f"
        android:text="@string/button" />

    <EditText
        android:id="@+id/textbox_label"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_below="@+id/button_rigtone_picker"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/cookie"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/label"
        android:textColor="#ffff" />

    <Button
        android:id="@+id/button_start_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textbox_label"
        android:layout_marginTop="96dp"
        android:layout_marginStart="90dp"
        android:background="#00838f"
        android:textColor="#ffff"
        android:fontFamily="@font/cookie"
        android:layout_marginEnd="90dp"
        android:text="@string/set_alarm" />


</RelativeLayout>